# OpenGL-Raytracer

./: .gitignore  CMakeLists.txt  README.md  compile inst.txt
res/: compute.shader
src/: camera.hpp  main.cpp  shader_class.cpp  shader_class.hpp
src/engine/: engine.cpp  engine.hpp  ui_handler.cpp  ui_handler.hpp
src/renderer/: camera.cpp  camera.hpp  material.cpp  material.hpp  renderer.cpp  renderer.hpp  sphere.cpp  sphere.hpp
